--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Fitur</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="feature.html" class="dropdown-item">Cek Tagihan</a>
-                        <a href="quote.html" class="dropdown-item">Daftar Pembayaran</a>
+                        <a href="#cek" class="dropdown-item">Cek Tagihan</a>
+                        <a href="daftar_byr.html" class="dropdown-item">Daftar Pembayaran</a>
                     </div>
                 </div>
                 <a href="#testimoni" class="nav-item nav-link">Testimoni</a>
@@ -452,7 +452,7 @@ terjangkau bagi seluruh warga Arjowinangun. </p>
 
 
     <!-- Quote Start -->
-    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0" id="cek">
         <div class="container quote px-lg-0">
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
